# trainscribe

./: .gitignore  LICENSE  README.md  pyproject.toml
src/trainscribe/: main.py
